# number_recognition

./: CMakeLists.txt  README.md  package.xml
src/: huawei.cpp  number_recognition.cpp  process.cpp  recognition.cpp  svm.cpp  training.cpp
